# encedo-hem-python-api

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HW.md  LICENSE  README.md  pyproject.toml
.ai/: app-description.txt
.ai/.api-reference/: ENCEDO-HEM-DOCS.md  HEM-REST-API-DESIGN.md  INTEGRATION_GUIDE.md  OPEN-QUESTIONS.md
.ai/.spec/: 0022_MainImplementation_Phase2_Step2.md  0025_MainImplementation_Phase2_Step5.md  0029_MainImplementation_Phase2_Step9.md  0030_MainImplementation_Phase3_Overview.md  0032_MainImplementation_Phase3_Step2.md  0033_MainImplementation_Phase3_Step3.md  0034_MainImplementation_Phase3_Step4.md  0038_MainImplementation_Phase3_Step8.md  0040_MainImplementation_Phase4_Overview.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: README.md  crypto_smoke.py  mvp.py  wipe_keys.py
scripts/: bootstrap.sh  linting_check.sh
src/encedo_hem/: __init__.py  _base64.py  auth.py  client.py  enums.py  errors.py  models.py  transport.py
tests/integration/: conftest.py  test_00_sanity.py  test_crypto_cipher_wrap.py  test_crypto_ecdh.py  test_crypto_exdsa.py  test_crypto_hmac.py  test_crypto_mldsa.py  test_crypto_mlkem.py  test_keymgmt_derive.py  test_keymgmt_import.py  test_keymgmt_search.py  test_logger.py  test_mvp_flow.py  test_storage.py  test_system_additions.py  test_upgrade_fw.py  test_upgrade_misc.py  test_upgrade_ui.py
tests/unit/: test_auth_vectors.py  test_base64.py  test_client.py  test_client_is_alive.py  test_crypto_ecdh.py  test_crypto_exdsa.py  test_crypto_hmac.py  test_crypto_pqc.py  test_crypto_wrap.py  test_enums.py  test_errors.py  test_keymgmt_derive.py  test_keymgmt_import.py  test_keymgmt_parse.py  test_logger.py  (+9 more)
(+23 files in other folders)
